src/snapshots/blog__snapshot@images__2016-04-MIR__loop-break.svg.snap
---
source: src/lib.rs
expression: content
input_file: site/images/2016-04-MIR/loop-break.svg
snapshot_kind: text
---
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xl="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 448 309" width="448pt" height="309pt" xmlns:dc="http://purl.org/dc/elements/1.1/"><metadata> Produced by OmniGraffle 6.5.2 <dc:date>2016-04-19 21:30:07 +0000</dc:date></metadata><defs><font-face font-family="Courier New" font-size="12" panose-1="2 7 3 9 2 2 5 2 4 4" units-per-em="1000" underline-position="-232.91016" underline-thickness="41.015625" slope="0" x-height="422.85156" cap-height="571.28906" ascent="832.51953" descent="-300.29297" font-weight="500"><font-face-src><font-face-name name="CourierNewPSMT"/></font-face-src></font-face><font-face font-family="Courier New" font-size="12" panose-1="2 7 6 9 2 2 5 2 4 4" units-per-em="1000" underline-position="-232.91016" underline-thickness="100.097656" slope="0" x-height="443.35938" cap-height="591.79688" ascent="832.51953" descent="-300.29297" font-weight="bold"><font-face-src><font-face-name name="CourierNewPS-BoldMT"/></font-face-src></font-face><marker orient="auto" overflow="visible" markerUnits="strokeWidth" id="FilledArrow_Marker" viewBox="-1 -4 10 8" markerWidth="10" markerHeight="8" color="black"><g><path d="M 8 0 L 0 -3 L 0 3 Z" fill="currentColor" stroke="currentColor" stroke-width="1"/></g></marker><font-face font-family="Helvetica" font-size="12" units-per-em="1000" underline-position="-75.683594" underline-thickness="49.316406" slope="0" x-height="522.94922" cap-height="717.28516" ascent="770.01953" descent="-229.98047" font-weight="500"><font-face-src><font-face-name name="Helvetica"/></font-face-src></font-face></defs><g stroke="none" stroke-opacity="1" stroke-dasharray="none" fill="none" fill-opacity="1"><title>loop-break</title><g><title>Layer 1</title><rect x="27" y="35" width="296" height="27" fill="white"/><rect x="27" y="35" width="296" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(32 41.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="2.5771484" y="10" textLength="280.8457">iterator = IntoIterator::into_iter(vec)</tspan></text><rect x="27" y="87" width="296" height="27" fill="white"/><rect x="27" y="87" width="296" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(32 93.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="2.5771484" y="10" textLength="187.23047">tmp = IntoIterator::next(&amp;</tspan><tspan font-family="Courier New" font-size="12" font-weight="bold" x="189.80762" y="10" textLength="21.603516">mut</tspan><tspan font-family="Courier New" font-size="12" font-weight="500" x="211.41113" y="10" textLength="72.01172"> iterator)</tspan></text><rect x="143" y="182.25" width="180" height="27" fill="white"/><rect x="143" y="182.25" width="180" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(148 188.75)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="5.7871094" y="10" textLength="158.42578">elem = (tmp as Some).0</tspan></text><line x1="175.00001" y1="62.5" x2="175.00001" y2="77.1" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><line x1="78.25" y1="143.25" x2="78.25" y2="168.35" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><line x1="233" y1="143.25" x2="233" y2="168.35" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(242 153.75)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".32617188" y="11" textLength="31.347656">Some</tspan></text><text transform="translate(86.75 153.75)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".15625" y="11" textLength="28.6875">None</tspan></text><path d="M 323 222.75 L 334.9 222.75 L 376 222.75 L 376 197.75 L 376 101 L 365 101 L 334.9 100.500004 L 332.9 100.500004" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(73.25 188.75)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".49902344" y="11" textLength="10.001953">...</tspan></text><rect x="27" y="113.25" width="296" height="27" fill="white"/><rect x="27" y="113.25" width="296" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(32 119.75)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="106.99414" y="10" textLength="43.20703">switch</tspan><tspan font-family="Courier New" font-size="12" font-weight="500" x="150.20117" y="10" textLength="28.804688"> tmp</tspan></text><rect x="143" y="209.25" width="180" height="27" fill="white"/><rect x="143" y="209.25" width="180" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(148 215.75)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="38.192383" y="10" textLength="93.615234">process(elem)</tspan></text></g></g></svg>
